--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run build && npm run watch",
-    "build": "npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets",
+    "build": "npm run build-ts && npm run tslint && npm run copy-static-assets",
     "serve": "node dist/server.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"nodemon dist/server.js\"",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"nodemon dist/server.js\"",
     "test": "jest --forceExit",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
-    "watch-sass": "node-sass -w src/public/css/main.scss dist/public/css/main.css",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "copy-static-assets": "node copyStaticAssets.js"
   },
@@ -71,7 +69,7 @@
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.35",
     "@types/express-session": "0.0.32",
-    "@types/jest": "^19.2.2",
+    "@types/jest": "^19.2.4",
     "@types/jquery": "^2.0.41",
     "@types/jsonwebtoken": "^7.2.1",
     "@types/lodash": "^4.14.63",
@@ -91,7 +89,7 @@
     "nodemon": "^1.11.0",
     "shelljs": "^0.7.7",
     "supertest": "^2.0.1",
-    "ts-jest": "^19.0.8",
+    "ts-jest": "^19.0.14",
     "tslint": "^5.0.0",
     "typescript": "^2.2.2"
   }
