--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
+    "cors": "^2.8.3",
     "dotenv": "^2.0.0",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
@@ -65,6 +66,7 @@
     "@types/async": "^2.0.40",
     "@types/body-parser": "^1.16.2",
     "@types/connect-mongo": "0.0.32",
+    "@types/cors": "^2.8.1",
     "@types/dotenv": "^2.0.20",
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.35",
