--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "blueimp-md5": "^2.7.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-mailer": "^0.3.1",
