--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.2",
     "express-mailer": "^0.3.1",
     "express-session": "^1.15.3",
+    "jsonwebtoken": "^7.4.1",
     "morgan": "~1.8.1",
     "node-uuid": "^1.4.8",
     "passport": "^0.3.2",
