--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pug": "^2.0.0-rc.2",
     "sequelize": "^4.2.0",
     "sequelize-cli": "^2.7.0",
+    "slug": "^0.9.1",
     "sqlite3": "^3.1.8"
   }
 }
